--- a/servicios/temporarios/temporarios.html
+++ b/servicios/temporarios/temporarios.html
@@ -46,7 +46,9 @@
 
             <!-- Logo centrado -->
             <div class="header-logo">
-                <a href="temporarios.html" class="brand">Perez <span>Carrasco</span></a>
+                 <a href="temporarios.html" class="logo">
+                    <img src="../../logoPC.png" alt="Perez Carrasco Inmobiliaria">
+                </a>
             </div>
 
             <!-- Menú derecho -->
