--- a/servicios/ventas/ventas.html
+++ b/servicios/ventas/ventas.html
@@ -46,7 +46,9 @@
 
             <!-- Logo centrado -->
             <div class="header-logo">
-                <a href="#ventas" class="brand">Perez <span>Carrasco</span></a>
+                <a href="ventas.html" class="logo">
+                    <img src="../../logoPC.png" alt="Perez Carrasco Inmobiliaria">
+                </a>
             </div>
 
             <!-- Menú derecho -->
