--- a/index.html
+++ b/index.html
@@ -9,75 +9,105 @@
     content="Perez Carrasco Inmobiliaria — ventas, alquileres y temporarios. Encontrá tu próxima propiedad.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Lora:wght@600;700&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkfQZfL3Z9ZqZP4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"
-    referrerpolicy="no-referrer" />
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
+
+ 
   <link rel="stylesheet" href="css/styles.css" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
 </head>
 
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const btn = document.querySelector('.subheader-toggle');
+    const panel = document.getElementById('subheader');
+    if (!btn || !panel) return;
+
+    const open = () => {
+      panel.classList.add('is-open');
+      panel.setAttribute('aria-hidden', 'false');
+      btn.setAttribute('aria-expanded', 'true');
+    };
+    const close = () => {
+      panel.classList.remove('is-open');
+      panel.setAttribute('aria-hidden', 'true');
+      btn.setAttribute('aria-expanded', 'false');
+    };
+
+    btn.addEventListener('click', (e) => {
+      e.preventDefault();
+      panel.classList.contains('is-open') ? close() : open();
+    });
+
+    document.addEventListener('click', (e) => {
+      const opened = document.querySelector('.has-submenu.open');
+      if (opened && !opened.contains(e.target)) {
+        opened.classList.remove('open');
+        opened.querySelector('.submenu-toggle')?.setAttribute('aria-expanded', 'false');
+      }
+    }, { passive: true });
+
+
+
+  });
+</script>
+
+
+
 <body>
 
 
   <!-- Header -->
-<header class="site-header">
-  <div class="container header-grid">
-    <div class="header-logo">
-      <a href="index.html" class="logo">
-        <img src="logoPC.png" alt="Perez Carrasco Inmobiliaria">
-      </a>
+  <header class="site-header">
+    <div class="container header-grid">
+      <div class="header-logo">
+        <a href="index.html" class="logo">
+          <img src="logoPC.png" alt="Perez Carrasco Inmobiliaria">
+        </a>
 
-      <!-- Flecha bajo el logo -->
-      <button class="subheader-toggle" aria-controls="subheader" aria-expanded="false" aria-label="Abrir menú">
-        <i class="fa-solid fa-chevron-down"></i>
-      </button>
+        <!-- Flecha bajo el logo -->
+        <button class="subheader-toggle" aria-controls="subheader" aria-expanded="false" aria-label="Abrir menú">
+          <i class="fa-solid fa-chevron-down"></i>
+        </button>
+      </div>
     </div>
-  </div>
-</header>
+  </header>
 
-<!-- Sub-header (panel deslizante fijo) -->
-<nav id="subheader" class="sub-header" aria-hidden="true">
-  <div class="container subheader-grid">
+  <!-- Sub-header (panel deslizante fijo) -->
+  <nav id="subheader" class="sub-header" aria-hidden="true">
+    <div class="container subheader-grid">
 
-    <!-- Menú izquierda -->
-    <nav class="header-nav nav-left" aria-label="Menú principal - izquierda">
-      <ul class="nav-list">
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#destacadas">Destacadas</a></li>
-        <li class="has-submenu">
-          <button class="submenu-toggle" aria-haspopup="true" aria-expanded="false">
-            Servicios <i class="fa-solid fa-chevron-down"></i>
-          </button>
-          <ul class="submenu" aria-label="submenu servicios">
-            <li><a href="servicios/ventas/ventas.html">Ventas</a></li>
-            <li><a href="servicios/alquileres/alquileres.html">Alquileres</a></li>
-            <li><a href="servicios/temporarios/temporarios.html">Temporarios</a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
+      <!-- Menú izquierda -->
+      <nav class="header-nav nav-left" aria-label="Menú principal - izquierda">
+        <ul class="nav-list">
+          <li><a href="#inicio">Buscar</a></li>
+          <li class="has-submenu">
+            <button class="submenu-toggle" aria-haspopup="true" aria-expanded="false">
+              Servicios <i class="fa-solid fa-chevron-down"></i>
+            </button>
+            <ul class="submenu" aria-label="submenu servicios">
+              <li><a href="servicios/ventas/ventas.html">Ventas</a></li>
+              <li><a href="servicios/alquileres/alquileres.html">Alquileres</a></li>
+              <li><a href="servicios/temporarios/temporarios.html">Temporarios</a></li>
+            </ul>
+          <li><a href="#destacadas">Destacadas</a></li>
+          </li>
+        </ul>
+      </nav>
 
-    <!-- Menú derecha -->
-    <nav class="header-nav nav-right" aria-label="Menú principal - derecha">
-      <ul class="nav-list">
-        <li><a href="#quienes-somos">Quiénes somos</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-      </ul>
-    </nav>
+      <!-- Menú derecha -->
+      <nav class="header-nav nav-right" aria-label="Menú principal - derecha">
+        <ul class="nav-list">
+          <li><a href="#quienes-somos">Quiénes somos</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+        </ul>
+      </nav>
 
-  </div>
-</nav>
+    </div>
+  </nav>
 
-<!-- (Opcional) Toggle móvil adicional dentro del header si lo necesitás -->
-<!--
-<button class="nav-toggle" aria-label="Abrir menú" aria-expanded="false">
-  <i class="fa-solid fa-bars"></i>
-</button>
--->
+ 
 
 
   <!-- Hero -->
@@ -85,9 +115,7 @@
     <div class="hero-overlay"></div>
     <div class="container hero-content">
       <h1>Tu hogar, nuestra búsqueda</h1>
-      <p><a href="servicios/ventas/ventas.html">Ventas</a> · <a
-          href="servicios/alquileres/alquileres.html">Alquileres</a> · <a
-          href="servicios/temporarios/temporarios.html">Temporarios</a></p>
+      <p>Ventas · Alquileres · Temporarios</p>
 
       <form id="buscador" class="search-form" autocomplete="off">
         <input type="text" id="q" name="q" placeholder="Barrio, calle o palabra clave…" aria-label="Buscar por texto">
@@ -173,11 +201,11 @@
       <div class="footer-left">
         <h3>Contacto</h3>
         <ul class="contact-list">
-          <li><i class="fa-brands fa-whatsapp"></i> <a href="https://wa.me/5490000000000" target="_blank"
-              rel="noopener">+54 9 0000 0000</a></li>
           <li><i class="fa-regular fa-envelope"></i> <a
               href="mailto:contacto@perezcarrasco.com">contacto@perezcarrasco.com</a></li>
-          <li><i class="fa-solid fa-location-dot"></i> Calle Ejemplo 123, Mar del Plata</li>
+          <li><i class="fa-brands fa-whatsapp"></i> <a href="https://wa.me/542235685409" target="_blank"
+              rel="noopener">WhatsApp</a></li>
+          <li><i class="fa-solid fa-location-dot"></i> Avenida siempre viva 123, Mar del Plata</li>
         </ul>
         <div class="socials">
           <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
@@ -186,7 +214,7 @@
         </div>
       </div>
       <div class="footer-center">
-        <a href="#inicio" class="brand brand-footer">Perez <span>Carrasco</span></a>
+        
       </div>
       <div class="footer-right"></div>
     </div>
