ajuste proxy de propiedades

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
   </section>
 
-  <!-- Propiedades destacadas -->
+  <!-- Propiedades destacadas 
   <section id="destacadas" class="section">
     <div class="container">
       <div class="section-head">
@@ -150,7 +150,7 @@
       </div>
       <div id="gridDestacadas" class="grid-cards" aria-live="polite"></div>
     </div>
-  </section>
+  </section>-->
 
   <section id="disponibles" class="section" style="padding:40px">
     <h2>Propiedades disponibles</h2>
